plugins {
    id 'java'
    id 'maven'
    id 'application'
    id 'maven-publish'
    id 'com.jfrog.bintray' version '1.8.4'
}

repositories {
    mavenLocal()
    jcenter()

    maven {
        url "https://maven.restlet.talend.com"
    }
}

sourceCompatibility = '1.8'
group = 'org.opencadc'
version = '1.2.2'

dependencies {
    implementation 'org.freemarker:freemarker:2.3.30'
    implementation 'org.apache.logging.log4j:log4j-core:[2.3.0,)'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:[2.11.0,)'
    implementation 'com.opencsv:opencsv:4.6'
    implementation 'org.restlet.jee:org.restlet:2.4.3'
    implementation 'org.restlet.jee:org.restlet.ext.servlet:2.4.3'
    implementation 'org.restlet.jee:org.restlet.ext.freemarker:2.4.3'
    implementation 'org.restlet.jee:org.restlet.ext.json:2.4.3'
    implementation 'commons-fileupload:commons-fileupload:[1.4,)'
    implementation 'org.apache.commons:commons-configuration2:[2.3,)'
    implementation 'org.opencadc:cadc-web-util:[1.2.4,)'
    implementation 'org.opencadc:cadc-util:[1.2.16,)'
    implementation 'org.opencadc:cadc-registry:[1.5.10,)'
    implementation 'org.opencadc:cadc-vosi:[1.3,)'
    implementation 'org.opencadc:cadc-access-control:[1.1.18,)'
    implementation 'org.opencadc:cadc-download-manager:[1.3.3,)'
    implementation 'org.opencadc:cadc-vos:[1.1.11,)'

    testImplementation 'junit:junit:[4.12,)'
    testImplementation 'org.opencadc:cadc-web-test:[2.1.0,)'
    testImplementation 'org.easymock:easymock:3.6'
    testImplementation 'org.mockito:mockito-core:2.28.2'
}

mainClassName = "ca.nrc.cadc.beacon.web.restlet.StorageApplication"

run {
    if ((System.getProperty("SSO_SERVERS") != null)
            && (System.getProperty("SSO_SERVERS") != "")) {
        systemProperty 'SSO_SERVERS', System.getProperty("SSO_SERVERS")
    }

    classpath += files('RsaSignaturePub.key')
}
